--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,29 +1,32 @@
-<div class="container">
+<div class="container" style="max-width: 1200px; padding: 10px;">
   <h2>Shop</h2>
 
   <div class="d-flex justify-content-between">
-    <span>Cart Items: {{ cartItemCount }}</span>
+    <span style="font-size: 18px; font-weight: bold;">Cart Items: {{ cartItemCount }}</span>
   </div>
 
   <div class="row">
-    <div class="col-md-4" *ngFor="let item of items">
-      <div class="card" [ngStyle]="{'background-image': 'url(' + item.imageUrl + ')', 'background-size': 'cover'}">
-        <div class="card-body text-white" style="background-color: rgba(0, 0, 0, 0.5)">
+    <div class="col-md-4" style="max-width: 350px;" *ngFor="let item of items">
+      <div class="card h-100">
+        <img [src]="item.imageUrl" class="card-img-top" alt="{{ item.name }}" style="height: 180px; width: 100%; object-fit: contain;">
+
+
+        <div class="card-body custom-card-body">
           <h5 class="card-title">{{ item.name }}</h5>
           <p class="card-text">{{ item.price | currency }}</p>
-
-          <div class="d-flex justify-content-center align-items-center">
-            <button class="btn btn-danger" (click)="decreaseItemCount(item)">-</button>
+          <div class="d-flex justify-content-center align-items-center mt-auto">
+            <button class="btn btn-danger btn-sm" (click)="decreaseItemCount(item)">-</button>
             <span class="mx-3">{{ getCartItemCount(item) || 0 }}</span>
-            <button class="btn btn-success" (click)="increaseItemCount(item)">+</button>
+            <button class="btn btn-success btn-sm" (click)="increaseItemCount(item)">+</button>
           </div>
         </div>
+        
       </div>
     </div>
   </div>
 
   <div class="d-flex justify-content-center mt-4">
-    <a routerLink="/cart" class="btn btn-secondary me-2">Go to Cart</a>
-    <button class="btn btn-primary" (click)="checkout()">Checkout</button>
+    <a routerLink="/cart" class="btn btn-secondary me-2 btn-lg">Go to Cart</a>
+    <button class="btn btn-primary btn-lg" (click)="checkout()">Checkout</button>
   </div>
 </div>
