--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,23 @@
   <!-- Conditional rendering based on route -->
   <div *ngIf="loggedInUser && isShopOrCartPage()" class="d-flex justify-content-between align-items-center">
     <span>Welcome, {{ loggedInUser.email }}</span>
-    <button class="btn btn-danger" (click)="logout()">Logout</button>
+    <!-- <button class="btn btn-danger" (click)="logout()">Logout</button> -->
+     <!-- User menu with popup -->
+           
+    <div class="user-menu" (click)="toggleMenu()">
+      <i class="fa fa-user-circle" aria-hidden="true"></i>
+    </div>
+
+    <div *ngIf="menuOpen" class="popup-menu">
+      <ul>
+        <li (click)="navigateTo('profile')">My Profile</li>
+        <li (click)="navigateTo('wishlist')">Wishlist</li>        
+        <li (click)="logout()">Logout</li>
+      </ul>
+    </div>
   </div>
 
-  <div *ngIf="notification" class="notification-popup" role="alert">
+  <div *ngIf="notification" class="notification-popup" [ngClass]="notificationType" role="alert">
     {{ notification }}
   </div>
 
